Added data balancing functions and integrated into workflow

--- a/Data_Processing.ipynb
+++ b/Data_Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,13 @@
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "import seaborn as sns \n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from imblearn.over_sampling import SMOTE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +363,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Data balancing functions\n",
+    "\n",
+    "def undersample_data(\n",
+    "        df: pd.DataFrame, \n",
+    "        response_col_name: str, \n",
+    "        proportion: float = 1\n",
+    "        ) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Perform undersampling to balance the classes in the dataset based on a specified proportion.\n",
+    "\n",
+    "    Parameters:\n",
+    "        df (pd.DataFrame): The input DataFrame containing the data.\n",
+    "        response_col_name (str): The name of the target column (class label).\n",
+    "        proportion (float): The desired ratio of minority to majority class samples (e.g., 0.5 for 1:2).\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: A balanced DataFrame with samples from both classes according to the specified proportion.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Separate the majority and minority classes\n",
+    "    majority_class = df[response_col_name].value_counts().idxmax()\n",
+    "    minority_class = df[response_col_name].value_counts().idxmin()\n",
+    "\n",
+    "    # Split the DataFrame into majority and minority\n",
+    "    df_majority = df[df[response_col_name] == majority_class]\n",
+    "    df_minority = df[df[response_col_name] == minority_class]\n",
+    "\n",
+    "    # Calculate the number of samples to take from the majority class\n",
+    "    n_minority = len(df_minority)\n",
+    "    n_majority = int(n_minority / proportion)\n",
+    "\n",
+    "    # Ensure we do not sample more than available\n",
+    "    n_majority = min(n_majority, len(df_majority))\n",
+    "\n",
+    "    # Randomly sample from the majority class\n",
+    "    df_majority_sampled = df_majority.sample(n = n_majority, random_state = 42)\n",
+    "\n",
+    "    # Combine the minority class with the undersampled majority class\n",
+    "    df_balanced = pd.concat([df_majority_sampled, df_minority])\n",
+    "\n",
+    "    # Shuffle the resulting DataFrame\n",
+    "    df_balanced = df_balanced.sample(frac = 1, random_state = 42).reset_index(drop = True)\n",
+    "\n",
+    "    return df_balanced\n",
+    "\n",
+    "def smote(df : pd.DataFrame, response_col_name : str) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Apply SMOTE to oversample the minority class in the dataset and return a balanced DataFrame.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        df (pd.DataFrame): The input DataFrame containing the data.\n",
+    "        response_col_name (str): The name of the target column (class label).\n",
+    "        \n",
+    "    Returns:\n",
+    "        pd.DataFrame: A DataFrame with balanced data using SMOTE.\n",
+    "    \"\"\"\n",
+    "    y = df[response_col_name]\n",
+    "    X = df.drop(columns=[response_col_name])\n",
+    "    \n",
+    "    sm = SMOTE(random_state = 42)\n",
+    "    X_resampled, y_resampled = sm.fit_resample(X, y)\n",
+    "    \n",
+    "    df_resampled = pd.concat(\n",
+    "        [\n",
+    "            pd.DataFrame(X_resampled, columns = X.columns), \n",
+    "            pd.DataFrame(y_resampled, columns = [response_col_name])\n",
+    "        ], \n",
+    "        axis = 1)\n",
+    "    \n",
+    "    return df_resampled\n",
+    "\n",
+    "def balance_data(\n",
+    "        df : pd.DataFrame, \n",
+    "        response_col_name : str,\n",
+    "        prop_synthetic_data : float = 0.25\n",
+    "        ) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Apply SMOTE and undersampling to return a balanced DataFrame.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        df (pd.DataFrame): The input DataFrame containing the data.\n",
+    "        response_col_name (str): The name of the target column (class label).\n",
+    "        prop_synthetic_data (float): Proportion of final data that will be synthetic. (0 to 0.5)\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: A DataFrame with balanced data.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    if prop_synthetic_data < 0:\n",
+    "        prop_synthetic_data = 0\n",
+    "    elif prop_synthetic_data >= 0.5:\n",
+    "        prop_synthetic_data = 0.499\n",
+    "\n",
+    "    df = undersample_data(\n",
+    "        df = df, \n",
+    "        response_col_name = response_col_name,\n",
+    "        proportion = (1 - 2 * prop_synthetic_data))\n",
+    "    \n",
+    "    df = smote(df, response_col_name = response_col_name)\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,36 +506,46 @@
     "            'num_invoices'\n",
     "            ]\n",
     "        )\n",
-    "    df = merge(client_df = client_df, invoice_df = invoice_df)\n",
-    "    df = prep_dataframe(\n",
+    "    df = merge(client_df = client_df, invoice_df = invoice_df) # Merge\n",
+    "    df = prep_dataframe( # Prep for PCA\n",
     "        df = df,\n",
     "        response_col_name = 'target',\n",
     "        cat_col_names = categorical_column_names\n",
     "    )\n",
-    "    heatmap(\n",
+    "    heatmap( # Do Heatmap for pre-reduced data\n",
     "        df, excluded_cols = categorical_column_names)\n",
-    "    df = principal_component_analysis(\n",
+    "    df = principal_component_analysis( # Do PCA\n",
     "        df = df,\n",
     "        response_col_name = 'target'\n",
     "    )\n",
     "    df = filter_low_variance(df, response_col_name = 'target')\n",
-    "    heatmap(\n",
+    "    # Do Low Variance Filter\n",
+    "    heatmap( # Do Heatmap for post-reduced data\n",
     "        df, excluded_cols = categorical_column_names, annotate = True)\n",
+    "    # Print pre-balancing proportion of response\n",
+    "    print(df['target'].value_counts()) \n",
+    "    df = balance_data( # Do balancing \n",
+    "        df = df, \n",
+    "        response_col_name = 'target', \n",
+    "        prop_synthetic_data = 0.4 # Final proportion of synthetic data\n",
+    "        ) \n",
+    "    # Print post-balancing proportion of response\n",
+    "    print(df['target'].value_counts()) \n",
     "    print(df.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Siah Jin Thau\\AppData\\Local\\Temp\\ipykernel_11516\\3343288833.py:11: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "C:\\Users\\Siah Jin Thau\\AppData\\Local\\Temp\\ipykernel_16724\\3343288833.py:11: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
       "  df['date'] = pd.to_datetime(df['date'])\n",
-      "C:\\Users\\Siah Jin Thau\\AppData\\Local\\Temp\\ipykernel_11516\\3343288833.py:11: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "C:\\Users\\Siah Jin Thau\\AppData\\Local\\Temp\\ipykernel_16724\\3343288833.py:11: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
       "  df['date'] = pd.to_datetime(df['date'])\n"
      ]
     },
@@ -461,26 +581,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  target       PC1       PC2       PC3       PC4       PC5       PC6  \\\n",
-      "0      0 -0.156303  1.455693 -0.289557 -0.772065  0.427308 -0.713407   \n",
-      "1      0  0.184205  1.865908 -0.485605 -0.742034  0.395662 -0.369473   \n",
-      "2      0 -0.009460  1.080616  0.426119  0.216862  1.281985 -0.362985   \n",
-      "3      0 -1.511789 -0.864854  0.245968 -0.411237  0.052633 -1.270572   \n",
-      "4      0  0.776524 -0.929508 -0.486357  1.165433 -1.434792  0.799974   \n",
-      "\n",
-      "        PC7       PC8       PC9      PC10      PC11      PC12      PC13  \\\n",
-      "0  0.381298 -0.260961  0.091013  0.154409  0.093105 -0.111642  0.133808   \n",
-      "1 -0.078411  0.258837 -0.098360 -0.055175 -0.107078 -0.968826 -0.449584   \n",
-      "2  0.522426 -1.629008  1.020376 -0.377531 -0.097228  0.053216 -0.347132   \n",
-      "3  0.218413 -0.048031 -0.276486  0.404534  0.517248 -0.448144 -0.285221   \n",
-      "4 -0.808864 -0.599817 -0.128966 -0.757656 -0.082450  0.644964 -0.201014   \n",
-      "\n",
-      "       PC14      PC15      PC16  \n",
-      "0 -0.058840 -0.068390  0.081431  \n",
-      "1 -0.201366  0.072139  0.486190  \n",
-      "2  0.112169  0.130270  0.046122  \n",
-      "3 -0.006446 -0.179386  0.047138  \n",
-      "4 -0.354725 -0.212332 -0.167950  \n"
+      "target\n",
+      "0    20576\n",
+      "1     1076\n",
+      "Name: count, dtype: int64\n",
+      "target\n",
+      "0    5380\n",
+      "1    5380\n",
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
