Bugfix: fixed warning message

--- a/Data_Processing.ipynb
+++ b/Data_Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
     "    \"\"\"\n",
     "\n",
     "    # Convert 'date' column to datetime\n",
-    "    df['date'] = pd.to_datetime(df['date'])\n",
+    "    df['date'] = pd.to_datetime(df['date'], dayfirst = True)\n",
     "    \n",
     "    # Find the earliest date\n",
     "    earliest_date = df['date'].min()\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,8 +518,8 @@
     "        df = df,\n",
     "        response_col_name = 'target'\n",
     "    )\n",
-    "    df = filter_low_variance(df, response_col_name = 'target')\n",
     "    # Do Low Variance Filter\n",
+    "    df = filter_low_variance(df, response_col_name = 'target')\n",
     "    heatmap( # Do Heatmap for post-reduced data\n",
     "        df, excluded_cols = categorical_column_names, annotate = True)\n",
     "    # Print pre-balancing proportion of response\n",
@@ -536,19 +536,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Siah Jin Thau\\AppData\\Local\\Temp\\ipykernel_16724\\3343288833.py:11: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
-      "  df['date'] = pd.to_datetime(df['date'])\n",
-      "C:\\Users\\Siah Jin Thau\\AppData\\Local\\Temp\\ipykernel_16724\\3343288833.py:11: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
-      "  df['date'] = pd.to_datetime(df['date'])\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -588,7 +578,27 @@
       "target\n",
       "0    5380\n",
       "1    5380\n",
-      "Name: count, dtype: int64\n"
+      "Name: count, dtype: int64\n",
+      "        PC1       PC2       PC3       PC4       PC5       PC6       PC7  \\\n",
+      "0 -0.313846  1.798580 -0.504239 -1.341465  0.278369 -1.478695  0.680652   \n",
+      "1  0.358223 -0.832108 -0.034217  1.080296 -0.858422  1.413999 -0.200257   \n",
+      "2 -1.216144 -0.884816 -0.509105 -0.426303 -0.990615  0.986792  0.266670   \n",
+      "3 -0.039088  1.365297 -0.331501 -0.789622  0.158097 -0.944652  0.314758   \n",
+      "4 -1.445440 -1.640353 -0.361803 -0.028223 -1.127603  1.511789  0.089378   \n",
+      "\n",
+      "        PC8       PC9      PC10      PC11      PC12      PC13      PC14  \\\n",
+      "0 -0.825650  0.289200  0.184575  0.178209  0.516270 -0.194868 -0.234672   \n",
+      "1 -0.601431  0.142532 -0.349596  0.097097  0.666427 -0.212606 -0.172135   \n",
+      "2  0.037183  0.117513  0.196744  0.092343  0.031090  0.831808  0.292165   \n",
+      "3 -0.460765 -0.155372  0.381961  0.606867 -0.833744 -0.365964 -0.157098   \n",
+      "4 -0.179459  0.427180 -0.213680 -0.198707  0.575190 -0.437308  0.221262   \n",
+      "\n",
+      "       PC15      PC16 target  \n",
+      "0 -0.388698 -0.588510      1  \n",
+      "1 -0.090313  0.006921      1  \n",
+      "2  0.168038  0.039964      0  \n",
+      "3 -0.231825  0.063099      1  \n",
+      "4  0.104004 -0.201012      0  \n"
      ]
     }
    ],
