--- a/main.ipynb
+++ b/main.ipynb
@@ -12,6 +12,7 @@
     "import seaborn as sns \n",
     "import xgboost as xgb\n",
     "import lightgbm as lgb\n",
+    "from typing import Literal\n",
     "import matplotlib.pyplot as plt\n",
     "from imblearn.over_sampling import SMOTE\n",
     "from sklearn.decomposition import PCA\n",
@@ -19,7 +20,6 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.calibration import CalibratedClassifierCV\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from sklearn.linear_model import LogisticRegression, SGDClassifier"
    ]
@@ -630,7 +630,7 @@
     "        response_col : str,\n",
     "        test_data : pd.DataFrame,\n",
     "        prob : bool = False\n",
-    "    ) -> np.ndarray[int | np.float64]:\n",
+    "    ) -> np.ndarray[np.int64 | np.float64]:\n",
     "    \"\"\"\n",
     "    Uses logistic regression algorithm to do classification.\n",
     "\n",
@@ -662,9 +662,11 @@
     "        train_data : pd.DataFrame,\n",
     "        response_col : str,\n",
     "        test_data : pd.DataFrame,\n",
-    "        k : int,\n",
-    "        prob : bool = False\n",
-    "    ) -> np.ndarray[int | np.float64]:\n",
+    "        prob : bool = False,\n",
+    "        k : int = 5,\n",
+    "        weights : Literal['uniform', 'distance'] = 'uniform',\n",
+    "        power_parameter : int = 2\n",
+    "    ) -> np.ndarray[np.int64 | np.float64]:\n",
     "    \"\"\"\n",
     "    Uses k-nearest neighbors algorithm to perform classification.\n",
     "\n",
@@ -672,8 +674,10 @@
     "        train_data (pd.DataFrame): The input DataFrame containing the train data.\n",
     "        response_col (str): The name of the target column (class label).\n",
     "        test_data (pd.DataFrame): The input DataFrame containing the test data.\n",
-    "        k (int): Number of nearest neighbors to consider.\n",
     "        prob (bool): To return a vector of probabilities instead of class predictions.\n",
+    "        k (int): Number of nearest neighbors to consider.\n",
+    "        weights ({'uniform', 'distance'}): Weight function used in prediction.\n",
+    "        power_parameter (int): Power parameter for the Minkowski metric. \n",
     "    \n",
     "    Returns:\n",
     "        np.ndarray: An array with model predictions.\n",
@@ -682,7 +686,11 @@
     "    y = train_data[response_col]\n",
     "    X = train_data.drop(columns = [response_col])\n",
     "\n",
-    "    Model = KNeighborsClassifier(n_neighbors = k)\n",
+    "    Model = KNeighborsClassifier(\n",
+    "        n_neighbors = k,\n",
+    "        weights = weights,\n",
+    "        p = power_parameter\n",
+    "    )\n",
     "    Model.fit(X = X, y = y)\n",
     "\n",
     "    feature_names = X.columns\n",
@@ -697,8 +705,13 @@
     "        train_data : pd.DataFrame,\n",
     "        response_col : str,\n",
     "        test_data : pd.DataFrame,\n",
-    "        prob : bool = False\n",
-    "    ) -> np.ndarray[int | np.float64]:\n",
+    "        prob : bool = False,\n",
+    "        criterion : Literal['gini', 'entropy', 'log_loss'] = 'gini',\n",
+    "        splitter : Literal['best', 'random'] = 'best',\n",
+    "        max_depth : int = None,\n",
+    "        min_samples_split : float = None,\n",
+    "        min_samples_leaf : float = None\n",
+    "    ) -> np.ndarray[np.int64 | np.float64]:\n",
     "    \"\"\"\n",
     "    Uses decision tree algorithm to perform classification.\n",
     "\n",
@@ -707,15 +720,33 @@
     "        response_col (str): The name of the target column (class label).\n",
     "        test_data (pd.DataFrame): The input DataFrame containing the test data.\n",
     "        prob (bool): To return a vector of probabilities instead of class predictions.\n",
-    "        \n",
+    "        criterion ({'gini', 'entropy', 'log_loss'}): The function to measure the quality of a split.\n",
+    "        splitter ({'best', 'random'}): The strategy used to choose the split at each node.\n",
+    "        max_depth (int): The maximum depth of the tree.\n",
+    "        min_samples_split (float 0 < x < 1): Fraction of total sample representing minimum number of samples required to split an internal node.\n",
+    "        min_samples_leaf (float 0 < x < 1): Fraction of total sample representing minimum number of samples for each node.\n",
+    "\n",
     "    Returns:\n",
     "        np.ndarray: An array with model predictions.\n",
     "    \"\"\"\n",
+    "    \n",
+    "    if min_samples_split is None:\n",
+    "        min_samples_split = 2\n",
+    "\n",
+    "    if min_samples_leaf is None:\n",
+    "        min_samples_leaf = 1\n",
     "\n",
     "    y = train_data[response_col]\n",
     "    X = train_data.drop(columns = [response_col])\n",
     "\n",
-    "    Model = DecisionTreeClassifier(random_state = 42)\n",
+    "    Model = DecisionTreeClassifier(\n",
+    "        criterion = criterion,\n",
+    "        splitter = splitter,\n",
+    "        max_depth = max_depth,\n",
+    "        min_samples_split = min_samples_split,\n",
+    "        min_samples_leaf = min_samples_leaf,\n",
+    "        random_state = 42\n",
+    "    )\n",
     "    Model.fit(X = X, y = y)\n",
     "\n",
     "    feature_names = X.columns\n",
@@ -730,8 +761,13 @@
     "        train_data : pd.DataFrame,\n",
     "        response_col : str,\n",
     "        test_data : pd.DataFrame,\n",
-    "        prob : bool = False\n",
-    "    ) -> np.ndarray[int | np.float64]:\n",
+    "        prob : bool = False,\n",
+    "        n_estimators : int = 100,\n",
+    "        criterion : Literal['gini', 'entropy', 'log_loss'] = 'gini',\n",
+    "        max_depth : int = None,\n",
+    "        min_samples_split : float = None,\n",
+    "        min_samples_leaf : float = None\n",
+    "    ) -> np.ndarray[np.int64 | np.float64]:\n",
     "    \"\"\"\n",
     "    Uses random forest algorithm to perform classification.\n",
     "\n",
@@ -740,15 +776,33 @@
     "        response_col (str): The name of the target column (class label).\n",
     "        test_data (pd.DataFrame): The input DataFrame containing the test data.\n",
     "        prob (bool): To return a vector of probabilities instead of class predictions.\n",
-    "        \n",
+    "        n_estimators (int): The number of trees in the forest.\n",
+    "        criterion ({'gini', 'entropy', 'log_loss'}): The function to measure the quality of a split.\n",
+    "        max_depth (int): The maximum depth of the tree.\n",
+    "        min_samples_split (float 0 < x < 1): Fraction of total sample representing minimum number of samples required to split an internal node.\n",
+    "        min_samples_leaf (float 0 < x < 1): Fraction of total sample representing minimum number of samples for each node.\n",
+    "\n",
     "    Returns:\n",
     "        np.ndarray: An array with model predictions.\n",
     "    \"\"\"\n",
     "\n",
+    "    if min_samples_split is None:\n",
+    "        min_samples_split = 2\n",
+    "\n",
+    "    if min_samples_leaf is None:\n",
+    "        min_samples_leaf = 1\n",
+    "\n",
     "    y = train_data[response_col]\n",
     "    X = train_data.drop(columns = [response_col])\n",
     "\n",
-    "    Model = RandomForestClassifier(random_state = 42)\n",
+    "    Model = RandomForestClassifier(\n",
+    "        n_estimators = n_estimators,\n",
+    "        criterion = criterion,\n",
+    "        max_depth = max_depth,\n",
+    "        min_samples_split = min_samples_split,\n",
+    "        min_samples_leaf = min_samples_leaf,\n",
+    "        random_state = 42\n",
+    "    )\n",
     "    Model.fit(X = X, y = y)\n",
     "\n",
     "    feature_names = X.columns\n",
@@ -763,8 +817,18 @@
     "        train_data : pd.DataFrame,\n",
     "        response_col : str,\n",
     "        test_data : pd.DataFrame,\n",
-    "        prob : bool = False\n",
-    "    ) -> np.ndarray[int | np.float64]:\n",
+    "        prob : bool = False,\n",
+    "        num_iterations : int = 100,\n",
+    "        learning_rate : float = 0.1,\n",
+    "        num_leaves : int = 31,\n",
+    "        max_depth : int = -1,\n",
+    "        bagging_freq : int = 0,\n",
+    "        bagging_fraction : float = 1,\n",
+    "        feature_fraction : float = 1,\n",
+    "        lambda_l1 : float = 0,\n",
+    "        lambda_l2 : float = 0,\n",
+    "        min_split_gain : float = 0\n",
+    "    ) -> np.ndarray[np.int64 | np.float64]:\n",
     "    \"\"\"\n",
     "    Uses light gradient boosting machine algorithm to perform classification.\n",
     "\n",
@@ -773,7 +837,17 @@
     "        response_col (str): The name of the target column (class label).\n",
     "        test_data (pd.DataFrame): The input DataFrame containing the test data.\n",
     "        prob (bool): To return a vector of probabilities instead of class predictions.\n",
-    "        \n",
+    "        num_iterations (int): The number of boosting iterations.\n",
+    "        learning_rate (float > 0): Shrinkage rate.\n",
+    "        num_leaves (int 1 < x <= 131072): The max number of leaves in one tree.\n",
+    "        max_depth (int): Limit the max depth for tree model. <= 0 means no limit.\n",
+    "        bagging_freq (int >= 0): Frequency for bagging.\n",
+    "        bagging_fraction (float 0 < x <= 1): To randomly selecting data without resampling.\n",
+    "        feature_fraction (float 0 < x <= 1): To randomly selecting data without resampling.\n",
+    "        lambda_l1 (float >= 0): L1 regularization.\n",
+    "        lambda_l2 (float >= 0): L2 regularization.\n",
+    "        min_split_gain (float >= 0): The minimal gain to perform split.\n",
+    "\n",
     "    Returns:\n",
     "        np.ndarray: An array with model predictions.\n",
     "    \"\"\"\n",
@@ -782,7 +856,23 @@
     "    X = train_data.drop(columns = [response_col])\n",
     "\n",
     "    train_data = lgb.Dataset(X, label = y)\n",
-    "    param = {'objective' : 'binary', 'metric' : 'binary_logloss'}\n",
+    "    param = {\n",
+    "        'objective' : 'binary', \n",
+    "        'metric' : 'binary_logloss',\n",
+    "        'boosting_type' : 'gbdt',\n",
+    "        'num_iterations' : num_iterations,\n",
+    "        'learning_rate' : learning_rate,\n",
+    "        'num_leaves' : num_leaves,\n",
+    "        'max_depth' : max_depth,\n",
+    "        'bagging_freq' : bagging_freq,\n",
+    "        'bagging_fraction' : bagging_fraction,\n",
+    "        'feature_fraction' : feature_fraction,\n",
+    "        'lambda_l1' : lambda_l1,\n",
+    "        'lambda_l2' : lambda_l2,\n",
+    "        'min_split_gain': min_split_gain,\n",
+    "        'deterministic' : True,\n",
+    "        'verbosity' : -1\n",
+    "    }\n",
     "    bst = lgb.train(param, train_data, 100)\n",
     "\n",
     "    feature_names = X.columns\n",
@@ -797,8 +887,12 @@
     "        train_data : pd.DataFrame,\n",
     "        response_col : str,\n",
     "        test_data : pd.DataFrame,\n",
-    "        prob : bool = False\n",
-    "    ) -> np.ndarray[int | np.float64]:\n",
+    "        prob : bool = False,\n",
+    "        penalty : Literal['l2', 'l1', 'elasticnet', None] = 'l2',\n",
+    "        alpha : float = 0.0001,\n",
+    "        max_iter : int = 100,\n",
+    "        learning_rate : Literal['constant', 'optimal', 'invscaling', 'adaptive'] = 'optimal'\n",
+    "    ) -> np.ndarray[np.int64 | np.float64]:\n",
     "    \"\"\"\n",
     "    Uses stochastic gradient descent algorithm to perform classification.\n",
     "\n",
@@ -807,7 +901,11 @@
     "        response_col (str): The name of the target column (class label).\n",
     "        test_data (pd.DataFrame): The input DataFrame containing the test data.\n",
     "        prob (bool): To return a vector of probabilities instead of class predictions.\n",
-    "        \n",
+    "        penalty ({'l2', 'l1', 'elasticnet', None}): The penalty (aka regularization term) to be used. \n",
+    "        alpha (float > 0): Constant that multiplies the regularization term.\n",
+    "        max_iter (int): The maximum number of passes over the training data (aka epochs).\n",
+    "        learning_rate ({'constant', 'optimal', 'invscaling', 'adaptive'}): The learning rate.\n",
+    "\n",
     "    Returns:\n",
     "        np.ndarray: An array with model predictions.\n",
     "    \"\"\"\n",
@@ -815,7 +913,13 @@
     "    y = train_data[response_col]\n",
     "    X = train_data.drop(columns = [response_col])\n",
     "\n",
-    "    Model = SGDClassifier(loss = \"log_loss\", random_state = 42)\n",
+    "    Model = SGDClassifier(\n",
+    "        loss = \"log_loss\", \n",
+    "        penalty = penalty,\n",
+    "        alpha = alpha,\n",
+    "        max_iter = max_iter,\n",
+    "        learning_rate = learning_rate,\n",
+    "        random_state = 42)\n",
     "    Model.fit(X, y)\n",
     "\n",
     "    feature_names = X.columns\n",
@@ -826,11 +930,21 @@
     "\n",
     "    return y_pred\n",
     "\n",
-    "def extreme_gradient_boost(train_data : pd.DataFrame,\n",
+    "def extreme_gradient_boost(\n",
+    "        train_data : pd.DataFrame,\n",
     "        response_col : str,\n",
     "        test_data : pd.DataFrame,\n",
-    "        prob : bool = False\n",
-    "    ) -> np.ndarray[int | np.float64]:\n",
+    "        prob : bool = False,\n",
+    "        learning_rate : float = 0.3,\n",
+    "        min_split_loss : float = 0,\n",
+    "        max_depth : int = 6,\n",
+    "        max_delta_step : int = 0,\n",
+    "        subsample : float = 1,\n",
+    "        sampling_method : Literal['uniform', 'gradient_based'] = 'uniform',\n",
+    "        reg_lambda : float = 1,\n",
+    "        reg_alpha : float = 0,\n",
+    "        tree_method : Literal['auto', 'exact', 'approx', 'hist'] = 'auto'\n",
+    "    ) -> np.ndarray[np.int64 | np.float64]:\n",
     "    \"\"\"\n",
     "    Uses extreme gradient boost algorithm to perform classification.\n",
     "\n",
@@ -839,7 +953,16 @@
     "        response_col (str): The name of the target column (class label).\n",
     "        test_data (pd.DataFrame): The input DataFrame containing the test data.\n",
     "        prob (bool): To return a vector of probabilities instead of class predictions.\n",
-    "        \n",
+    "        learning_rate (float 0 <= x <= 1): Step size shrinkage used in update to prevent overfitting.\n",
+    "        min_split_loss (float >= 0): Minimum loss reduction required to make a further partition on a leaf node of the tree.\n",
+    "        max_depth (int): Maximum depth of a tree. Beware that XGBoost aggressively consumes memory when training a deep tree. \"exact\" tree method requires non-zero value.\n",
+    "        max_delta_step (int >= 0): Maximum delta step we allow each leaf output to be. Setting it to value of 1-10 might help control the update.\n",
+    "        subsample (int 0 < x <= 1): Subsample ratio of the training instances.\n",
+    "        sampling_method ({'uniform', 'gradient_based'}): The method to use to sample the training instances.\n",
+    "        reg_lambda (float >= 0): L2 regularization term on weights. \n",
+    "        reg_alpha (float >= 0): L1 regularization term on weights. \n",
+    "        tree_method ({'auto', 'exact', 'approx', 'hist'}): The tree construction algorithm used in XGBoost.\n",
+    "\n",
     "    Returns:\n",
     "        np.ndarray: An array with model predictions.\n",
     "    \"\"\"\n",
@@ -847,7 +970,18 @@
     "    y = train_data[response_col]\n",
     "    X = train_data.drop(columns = [response_col])\n",
     "\n",
-    "    Model = xgb.XGBClassifier(random_state = 42)\n",
+    "    Model = xgb.XGBClassifier(\n",
+    "        eta = learning_rate,\n",
+    "        gamma = min_split_loss,\n",
+    "        max_depth = max_depth,\n",
+    "        max_delta_step = max_delta_step,\n",
+    "        subsample = subsample,\n",
+    "        sampling_method = sampling_method,\n",
+    "        reg_lambda = reg_lambda,\n",
+    "        reg_alpha = reg_alpha,\n",
+    "        tree_method = tree_method,\n",
+    "        random_state = 42\n",
+    "    )\n",
     "    Model.fit(X, y)\n",
     "\n",
     "    feature_names = X.columns\n",
@@ -891,21 +1025,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 0 0 ... 0 0 0]\n",
-      "[0.18645783 0.0109071  0.07334836 ... 0.13643851 0.09285764 0.32260745]\n"
+      "[9.80444220e-02 4.62091097e-05 6.34295397e-02 ... 1.23963710e-01\n",
+      " 4.62467775e-01 4.05377998e-01]\n",
+      "[0.1122873  0.00246492 0.28776439 ... 0.08284157 0.18002027 0.50429234]\n"
      ]
     }
    ],
    "source": [
     "## FOR TESTING \n",
     "\n",
+    "# Temp Fix\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
     "df = data_processing()\n",
     "split_index = len(df) // 2\n",
     "df1 = df.iloc[:split_index]\n",
     "df2 = df.iloc[split_index:]\n",
-    "out = logistic_regression(df1, 'target', df2, False)\n",
+    "out = light_gradient_boosting_machine(\n",
+    "    train_data = df1,\n",
+    "    response_col = 'target',\n",
+    "    test_data = df2,\n",
+    "    prob = True,\n",
+    "    learning_rate = 0.9,\n",
+    "    min_split_gain = 1\n",
+    ")\n",
     "print(out)\n",
-    "out = logistic_regression(df1, 'target', df2, True)\n",
+    "out = light_gradient_boosting_machine(\n",
+    "    train_data = df1,\n",
+    "    response_col = 'target',\n",
+    "    test_data = df2,\n",
+    "    prob = True,\n",
+    "    learning_rate = 0.1,\n",
+    "    min_split_gain = 1\n",
+    ")\n",
     "print(out)"
    ]
   }
