Model evaluation in Metrics

--- a/Metrics.ipynb
+++ b/Metrics.ipynb
@@ -124,6 +124,92 @@
     "# Plot confusion matrix\n",
     "plot_confusion_matrix(y_test, y_pred)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluation of models:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.datasets import make_classification\n",
+    "\n",
+    "def evaluate_models_auc(models, params):\n",
+    "    \"\"\"\n",
+    "    Evaluates a list of models by training each model with the corresponding parameters \n",
+    "    and calculates ROC-AUC, returning models sorted by their AUC-ROC score in descending order.\n",
+    "\n",
+    "    Parameters:\n",
+    "        models (list): A list of model functions (e.g., LogisticRegression, RandomForestClassifier).\n",
+    "        params (list): A list of dictionaries containing the parameters for each model.\n",
+    "        \n",
+    "    Returns:\n",
+    "        list of tuples: A list of (model_name, ROC-AUC score) tuples, sorted by AUC-ROC score in descending order.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Create a synthetic dataset (for demonstration purposes, replace this with your own dataset loading)\n",
+    "    X, y = make_classification(n_samples=1000, n_features=20, n_classes=2, random_state=42)\n",
+    "    \n",
+    "    # Split the data into training and testing sets\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42, stratify=y)\n",
+    "    \n",
+    "    # List to store the model names and AUC-ROC scores\n",
+    "    roc_auc_results = []\n",
+    "    \n",
+    "    # Iterate through the models and params lists\n",
+    "    for model_func, param_dict in zip(models, params):\n",
+    "        \n",
+    "        # Initialize the model with the given parameters\n",
+    "        model = model_func(**param_dict)\n",
+    "        \n",
+    "        # Train the model\n",
+    "        model.fit(X_train, y_train)\n",
+    "        \n",
+    "        # Get predicted probabilities (for ROC-AUC, we need probabilities, not class labels)\n",
+    "        y_pred_proba = model.predict_proba(X_test)[:, 1]  # Probabilities for the positive class\n",
+    "        \n",
+    "        # Calculate the ROC-AUC score\n",
+    "        roc_auc = roc_auc_score(y_test, y_pred_proba)\n",
+    "        \n",
+    "        # Store the model name and its ROC-AUC score\n",
+    "        roc_auc_results.append((model_func.__name__, roc_auc))\n",
+    "    \n",
+    "    # Sort the models by their AUC-ROC score in descending order\n",
+    "    roc_auc_results.sort(key=lambda x: x[1], reverse=True)\n",
+    "    \n",
+    "    return roc_auc_results\n",
+    "\n",
+    "# Example usage:\n",
+    "\n",
+    "# Import some classifiers\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "# Define the models (as functions) and corresponding parameters\n",
+    "models = [LogisticRegression, RandomForestClassifier, SVC]\n",
+    "params = [\n",
+    "    {'random_state': 42, 'max_iter': 1000},  # Parameters for Logistic Regression\n",
+    "    {'n_estimators': 100, 'random_state': 42},  # Parameters for Random Forest\n",
+    "    {'probability': True, 'random_state': 42}  # Parameters for SVC (needs probability=True for predict_proba)\n",
+    "]\n",
+    "\n",
+    "# Call the evaluation function\n",
+    "roc_auc_results = evaluate_models_auc(models, params)\n",
+    "\n",
+    "# Print the sorted ROC-AUC scores\n",
+    "print(\"Models sorted by ROC-AUC score:\")\n",
+    "for model_name, auc_score in roc_auc_results:\n",
+    "    print(f\"{model_name}: {auc_score}\")\n"
+   ]
   }
  ],
  "metadata": {
