--- a/Metrics.ipynb
+++ b/Metrics.ipynb
@@ -51,21 +51,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'rf_model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Assuming `y_test` are actual labels and `y_pred` are predicted labels\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# If you have predicted probabilities (for ROC-AUC), include `y_pred_proba` as well\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Example\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m y_pred \u001b[38;5;241m=\u001b[39m \u001b[43mrf_model\u001b[49m\u001b[38;5;241m.\u001b[39mpredict(X_test_scaled)\n\u001b[1;32m      6\u001b[0m y_pred_proba \u001b[38;5;241m=\u001b[39m rf_model\u001b[38;5;241m.\u001b[39mpredict_proba(X_test_scaled)[:, \u001b[38;5;241m1\u001b[39m]  \u001b[38;5;66;03m# Probabilities for the positive class (fraud)\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Call the evaluation function\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'rf_model' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Assuming `y_test` are actual labels and `y_pred` are predicted labels\n",
     "# If you have predicted probabilities (for ROC-AUC), include `y_pred_proba` as well\n",
@@ -91,21 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'y_test' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 16\u001b[0m\n\u001b[1;32m     13\u001b[0m     plt\u001b[38;5;241m.\u001b[39mshow()\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# Plot confusion matrix\u001b[39;00m\n\u001b[0;32m---> 16\u001b[0m plot_confusion_matrix(\u001b[43my_test\u001b[49m, y_pred)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'y_test' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
@@ -123,6 +99,209 @@
     "\n",
     "# Plot confusion matrix\n",
     "plot_confusion_matrix(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9.80444220e-02 4.62091097e-05 6.34295397e-02 ... 1.23963710e-01\n",
+      " 4.62467775e-01 4.05377998e-01]\n",
+      "[0.1122873  0.00246492 0.28776439 ... 0.08284157 0.18002027 0.50429234]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import import_ipynb \n",
+    "import main as m\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PC1</th>\n",
+       "      <th>PC2</th>\n",
+       "      <th>PC3</th>\n",
+       "      <th>PC4</th>\n",
+       "      <th>PC5</th>\n",
+       "      <th>PC6</th>\n",
+       "      <th>PC7</th>\n",
+       "      <th>PC8</th>\n",
+       "      <th>PC9</th>\n",
+       "      <th>PC10</th>\n",
+       "      <th>PC11</th>\n",
+       "      <th>PC12</th>\n",
+       "      <th>PC13</th>\n",
+       "      <th>PC14</th>\n",
+       "      <th>PC15</th>\n",
+       "      <th>PC16</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.313846</td>\n",
+       "      <td>1.798580</td>\n",
+       "      <td>-0.504239</td>\n",
+       "      <td>-1.341465</td>\n",
+       "      <td>0.278369</td>\n",
+       "      <td>-1.478695</td>\n",
+       "      <td>0.680652</td>\n",
+       "      <td>-0.825650</td>\n",
+       "      <td>0.289200</td>\n",
+       "      <td>0.184575</td>\n",
+       "      <td>0.178209</td>\n",
+       "      <td>0.516270</td>\n",
+       "      <td>-0.194868</td>\n",
+       "      <td>-0.234672</td>\n",
+       "      <td>-0.388698</td>\n",
+       "      <td>-0.588510</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.358223</td>\n",
+       "      <td>-0.832108</td>\n",
+       "      <td>-0.034217</td>\n",
+       "      <td>1.080296</td>\n",
+       "      <td>-0.858422</td>\n",
+       "      <td>1.413999</td>\n",
+       "      <td>-0.200257</td>\n",
+       "      <td>-0.601431</td>\n",
+       "      <td>0.142532</td>\n",
+       "      <td>-0.349596</td>\n",
+       "      <td>0.097097</td>\n",
+       "      <td>0.666427</td>\n",
+       "      <td>-0.212606</td>\n",
+       "      <td>-0.172135</td>\n",
+       "      <td>-0.090313</td>\n",
+       "      <td>0.006921</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1.216144</td>\n",
+       "      <td>-0.884816</td>\n",
+       "      <td>-0.509105</td>\n",
+       "      <td>-0.426303</td>\n",
+       "      <td>-0.990615</td>\n",
+       "      <td>0.986792</td>\n",
+       "      <td>0.266670</td>\n",
+       "      <td>0.037183</td>\n",
+       "      <td>0.117513</td>\n",
+       "      <td>0.196744</td>\n",
+       "      <td>0.092343</td>\n",
+       "      <td>0.031090</td>\n",
+       "      <td>0.831808</td>\n",
+       "      <td>0.292165</td>\n",
+       "      <td>0.168038</td>\n",
+       "      <td>0.039964</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.039088</td>\n",
+       "      <td>1.365297</td>\n",
+       "      <td>-0.331501</td>\n",
+       "      <td>-0.789622</td>\n",
+       "      <td>0.158097</td>\n",
+       "      <td>-0.944652</td>\n",
+       "      <td>0.314758</td>\n",
+       "      <td>-0.460765</td>\n",
+       "      <td>-0.155372</td>\n",
+       "      <td>0.381961</td>\n",
+       "      <td>0.606867</td>\n",
+       "      <td>-0.833744</td>\n",
+       "      <td>-0.365964</td>\n",
+       "      <td>-0.157098</td>\n",
+       "      <td>-0.231825</td>\n",
+       "      <td>0.063099</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-1.445440</td>\n",
+       "      <td>-1.640353</td>\n",
+       "      <td>-0.361803</td>\n",
+       "      <td>-0.028223</td>\n",
+       "      <td>-1.127603</td>\n",
+       "      <td>1.511789</td>\n",
+       "      <td>0.089378</td>\n",
+       "      <td>-0.179459</td>\n",
+       "      <td>0.427180</td>\n",
+       "      <td>-0.213680</td>\n",
+       "      <td>-0.198707</td>\n",
+       "      <td>0.575190</td>\n",
+       "      <td>-0.437308</td>\n",
+       "      <td>0.221262</td>\n",
+       "      <td>0.104004</td>\n",
+       "      <td>-0.201012</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        PC1       PC2       PC3       PC4       PC5       PC6       PC7  \\\n",
+       "0 -0.313846  1.798580 -0.504239 -1.341465  0.278369 -1.478695  0.680652   \n",
+       "1  0.358223 -0.832108 -0.034217  1.080296 -0.858422  1.413999 -0.200257   \n",
+       "2 -1.216144 -0.884816 -0.509105 -0.426303 -0.990615  0.986792  0.266670   \n",
+       "3 -0.039088  1.365297 -0.331501 -0.789622  0.158097 -0.944652  0.314758   \n",
+       "4 -1.445440 -1.640353 -0.361803 -0.028223 -1.127603  1.511789  0.089378   \n",
+       "\n",
+       "        PC8       PC9      PC10      PC11      PC12      PC13      PC14  \\\n",
+       "0 -0.825650  0.289200  0.184575  0.178209  0.516270 -0.194868 -0.234672   \n",
+       "1 -0.601431  0.142532 -0.349596  0.097097  0.666427 -0.212606 -0.172135   \n",
+       "2  0.037183  0.117513  0.196744  0.092343  0.031090  0.831808  0.292165   \n",
+       "3 -0.460765 -0.155372  0.381961  0.606867 -0.833744 -0.365964 -0.157098   \n",
+       "4 -0.179459  0.427180 -0.213680 -0.198707  0.575190 -0.437308  0.221262   \n",
+       "\n",
+       "       PC15      PC16 target  \n",
+       "0 -0.388698 -0.588510      1  \n",
+       "1 -0.090313  0.006921      1  \n",
+       "2  0.168038  0.039964      0  \n",
+       "3 -0.231825  0.063099      1  \n",
+       "4  0.104004 -0.201012      0  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = m.data_processing()\n",
+    "data.head()"
    ]
   },
   {
