Edited model evaluation

--- a/Metrics.ipynb
+++ b/Metrics.ipynb
@@ -313,15 +313,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data_processing' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 70\u001b[0m\n\u001b[1;32m     63\u001b[0m params \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m     64\u001b[0m     {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrandom_state\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m42\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmax_iter\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m1000\u001b[39m},  \u001b[38;5;66;03m# Parameters for Logistic Regression\u001b[39;00m\n\u001b[1;32m     65\u001b[0m     {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mn_estimators\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m100\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrandom_state\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m42\u001b[39m},  \u001b[38;5;66;03m# Parameters for Random Forest\u001b[39;00m\n\u001b[1;32m     66\u001b[0m     {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprobability\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28;01mTrue\u001b[39;00m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrandom_state\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m42\u001b[39m}  \u001b[38;5;66;03m# Parameters for SVC (needs probability=True for predict_proba)\u001b[39;00m\n\u001b[1;32m     67\u001b[0m ]\n\u001b[1;32m     69\u001b[0m \u001b[38;5;66;03m# Call the evaluation function with PCA-transformed data\u001b[39;00m\n\u001b[0;32m---> 70\u001b[0m roc_auc_results \u001b[38;5;241m=\u001b[39m \u001b[43mevaluate_models_auc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodels\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlogs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m     72\u001b[0m \u001b[38;5;66;03m# Print the sorted ROC-AUC scores\u001b[39;00m\n\u001b[1;32m     73\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mModels sorted by ROC-AUC score:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[1], line 19\u001b[0m, in \u001b[0;36mevaluate_models_auc\u001b[0;34m(models, params, logs)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;124;03mEvaluates a list of models by training each model with the corresponding parameters \u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;124;03mand calculates ROC-AUC, returning models sorted by their AUC-ROC score in descending order.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;124;03m    list of tuples: A list of (model_name, ROC-AUC score) tuples, sorted by AUC-ROC score in descending order.\u001b[39;00m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# Use the data_processing function to load and preprocess the dataset\u001b[39;00m\n\u001b[0;32m---> 19\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mdata_processing\u001b[49m(logs\u001b[38;5;241m=\u001b[39mlogs)\n\u001b[1;32m     21\u001b[0m \u001b[38;5;66;03m# Separate the PCA components (PC1, PC2, ..., PC16) as features and target as the response variable\u001b[39;00m\n\u001b[1;32m     22\u001b[0m X \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mdrop(columns\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtarget\u001b[39m\u001b[38;5;124m'\u001b[39m])  \u001b[38;5;66;03m# All columns except 'target' are PCA components\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data_processing' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.datasets import make_classification\n",
     "\n",
-    "def evaluate_models_auc(models, params):\n",
+    "def evaluate_models_auc(models, params, logs=False):\n",
     "    \"\"\"\n",
     "    Evaluates a list of models by training each model with the corresponding parameters \n",
     "    and calculates ROC-AUC, returning models sorted by their AUC-ROC score in descending order.\n",
@@ -329,13 +341,18 @@
     "    Parameters:\n",
     "        models (list): A list of model functions (e.g., LogisticRegression, RandomForestClassifier).\n",
     "        params (list): A list of dictionaries containing the parameters for each model.\n",
+    "        logs (bool): Whether to log the data processing steps (default: False).\n",
     "        \n",
     "    Returns:\n",
     "        list of tuples: A list of (model_name, ROC-AUC score) tuples, sorted by AUC-ROC score in descending order.\n",
     "    \"\"\"\n",
     "    \n",
-    "    # Create a synthetic dataset (for demonstration purposes, replace this with your own dataset loading)\n",
-    "    X, y = make_classification(n_samples=1000, n_features=20, n_classes=2, random_state=42)\n",
+    "    # Use the data_processing function to load and preprocess the dataset\n",
+    "    df = data_processing(logs=logs)\n",
+    "\n",
+    "    # Separate the PCA components (PC1, PC2, ..., PC16) as features and target as the response variable\n",
+    "    X = df.drop(columns=['target'])  # All columns except 'target' are PCA components\n",
+    "    y = df['target']\n",
     "    \n",
     "    # Split the data into training and testing sets\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42, stratify=y)\n",
@@ -381,8 +398,8 @@
     "    {'probability': True, 'random_state': 42}  # Parameters for SVC (needs probability=True for predict_proba)\n",
     "]\n",
     "\n",
-    "# Call the evaluation function\n",
-    "roc_auc_results = evaluate_models_auc(models, params)\n",
+    "# Call the evaluation function with PCA-transformed data\n",
+    "roc_auc_results = evaluate_models_auc(models, params, logs=True)\n",
     "\n",
     "# Print the sorted ROC-AUC scores\n",
     "print(\"Models sorted by ROC-AUC score:\")\n",
