Edited metrics file

--- a/Metrics.ipynb
+++ b/Metrics.ipynb
@@ -333,7 +333,7 @@
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "def evaluate_models_auc(models, params, logs=False):\n",
+    "def evaluate_models_auc(models, params, df = data_processing()):\n",
     "    \"\"\"\n",
     "    Evaluates a list of models by training each model with the corresponding parameters \n",
     "    and calculates ROC-AUC, returning models sorted by their AUC-ROC score in descending order.\n",
@@ -346,9 +346,6 @@
     "    Returns:\n",
     "        list of tuples: A list of (model_name, ROC-AUC score) tuples, sorted by AUC-ROC score in descending order.\n",
     "    \"\"\"\n",
-    "    \n",
-    "    # Use the data_processing function to load and preprocess the dataset\n",
-    "    df = data_processing(logs=logs)\n",
     "\n",
     "    # Separate the PCA components (PC1, PC2, ..., PC16) as features and target as the response variable\n",
     "    X = df.drop(columns=['target'])  # All columns except 'target' are PCA components\n",
